--- a/styles/AboutMe.module.scss
+++ b/styles/AboutMe.module.scss
@@ -1,17 +1,17 @@
 .container {
-  min-height: 300px;
+  min-height: 250px;
   background-color: #f4f1f1;
   .split {
-    display: flex;
-    .left {
-      max-width: 800px;
-      padding-right: 20px;
-    }
+    display: grid;
+    grid-auto-flow: row;
+    justify-content: center;
     .right {
       display: flex;
       justify-content: center;
       align-items: center;
-      flex: 1;
+    }
+    @media screen and (min-width: 800px) {
+      grid-auto-flow: column;
     }
   }
 }
