--- a/styles/SideBar.module.scss
+++ b/styles/SideBar.module.scss
@@ -1,4 +1,3 @@
-
 @keyframes example {
   from {
   }
@@ -8,7 +7,7 @@
 }
 @keyframes exampleopen {
   from {
-      height: 0px;
+    height: 0px;
   }
   to {
     height: 320px;
@@ -17,20 +16,25 @@
 
 /* The element to apply the animation to */
 .container-close {
-  /* width: 100px; */
   height: 320px;
   visibility: hidden;
-  /* background-color: red; */
   animation-name: example;
   animation-fill-mode: forwards;
-  
+
   animation-duration: 1.5s;
 }
 .container-open {
-    /* width: 400px; */
-    height: 320px;
-    /* background-color: red; */
-    animation-fill-mode: forwards;
+  height: 320px;
+  animation-fill-mode: forwards;
   animation-name: exampleopen;
   animation-duration: 1s;
+}
+
+.content{
+  flex-grow: 1;
+}
+
+.toolbar {
+  display: flex;
+  align-items: center;
 }
